refactored how we call the various on click functions. Not yet working but wanted to save progress

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <div class="main-display" data-visibility="hidden">
                     <ul class="collapsible z-depth-2 " data-collapsible="expandable">
                         <li>
-                            <div class="collapsible-header z-depth-2">
+                            <div class="collapsible-header z-depth-2" id="stock-price-data">
                                 <i class="material-icons">attach_money</i>Stock Price</div>
                             <div class="collapsible-body stock-price">
                             </div>
@@ -88,7 +88,7 @@
                         <li>
                             <div class="collapsible-header z-depth-2">
                                 <i class="material-icons">chrome_reader_mode</i>News</div>
-                            <div class="collapsible-body company-news"></div>
+                            <div class="collapsible-body company-news" id="stock-news-data"></div>
                         </li>
                     </ul>
                 </div>
