grabbing current day prices and writing them to the document

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <img class="carousel-item" id="netflix" src="assets/images/netflix.png">
                 <img class="carousel-item" id="jpmorgan" src="assets/images/jpmorgan.png">
                 <img class="carousel-item" id="alphabet" src="assets/images/alphabet.png">
-                <img class="carousel-item" id="berkshire" src="assets/images/berkshire.png">
+                <img class="carousel-item" id="Berkshire Hathaway" src="assets/images/berkshire.png">
                 <img class="carousel-item" id="microsoft" src="assets/images/microsoft.png">
                 <img class="carousel-item" id="disney" src="assets/images/disney.png">
                 <img class="carousel-item" id="johnson" src="assets/images/johnson.png">
