added functionality to display news

--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
                             </div>
                         </li>
                         <li>
-                            <div class="collapsible-header z-depth-2">
+                            <div class="collapsible-header z-depth-2" id="stock-news-data">
                                 <i class="material-icons">chrome_reader_mode</i>News</div>
-                            <div class="collapsible-body company-news" id="stock-news-data"></div>
+                            <div class="collapsible-body company-news"></div>
                         </li>
                     </ul>
                 </div>
