--- a/trade.html
+++ b/trade.html
@@ -30,7 +30,7 @@
     <div class="row">
         <nav class="white">
             <div class="nav-wrapper">
-                <a href='#' class="brand-logo red-text">StockInfo.com</a>
+                <a href='index.html' class="brand-logo red-text">StockInfo.com</a>
                 <ul class="high-on-med-and-down right">
                     <li>
                         <div class="center row">
@@ -42,6 +42,7 @@
                                 </div>
                             </div>
                         </div>
+                    </li>
                     <li>
                         <a href='elearning.html' class="red-text">eLearning</a>
                     </li>
@@ -58,16 +59,7 @@
     <div id="introContainer">
         <div class="row">
             <div data-visibility="visible" class="carousel">
-                <img class="carousel-item" id="amazon" src="assets/images/amazon.png">
-                <img class="carousel-item" id="tesla" src="assets/images/tesla.png">
-                <img class="carousel-item" id="netflix" src="assets/images/netflix.png">
-                <img class="carousel-item" id="jpmorgan" src="assets/images/jpmorgan.png">
-                <img class="carousel-item" id="alphabet" src="assets/images/alphabet.png">
-                <img class="carousel-item" id="Berkshire Hathaway" src="assets/images/berkshire.png">
-                <img class="carousel-item" id="microsoft" src="assets/images/microsoft.png">
-                <img class="carousel-item" id="disney" src="assets/images/disney.png">
-                <img class="carousel-item" id="johnson" src="assets/images/johnson.png">
-                <img class="carousel-item" id="apple" src="assets/images/apple.png">
+                <img class="carousel-item" id="mo-you-know" src="assets/images/borat.jpg">
                 </a>
             </div>
         </div>
