adding to the elearning, portfolio, and trade pages as placeholders for future development

--- a/trade.html
+++ b/trade.html
@@ -59,7 +59,9 @@
     <div id="introContainer">
         <div class="row">
             <div data-visibility="visible" class="carousel">
-                <img class="carousel-item" id="mo-you-know" src="assets/images/borat.jpg">
+                <img class="carousel-item" id="motley-fool" src="assets/images/motley-fool.png">
+                <img class="carousel-item" id="investopedia" src="assets/images/investopedia.png">
+                <img class="carousel-item" id="IBD" src="assets/images/investors.jpg">
                 </a>
             </div>
         </div>
@@ -72,14 +74,9 @@
                     <ul class="collapsible z-depth-2 " data-collapsible="expandable">
                         <li>
                             <div class="collapsible-header z-depth-2" id="stock-price-data">
-                                <i class="material-icons">attach_money</i>Stock Price</div>
+                                <i class="material-icons">attach_money</i>Find a broker</div>
                             <div class="collapsible-body stock-price">
                             </div>
-                        </li>
-                        <li>
-                            <div class="collapsible-header z-depth-2" id="stock-news-data">
-                                <i class="material-icons">chrome_reader_mode</i>News</div>
-                            <div class="collapsible-body company-news"></div>
                         </li>
                     </ul>
                 </div>
